objects/Matter_Sharing_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Matter_Field__c</fullName>
        <label>Matter Field</label>
        <metadataRelationshipControllingField>Matter_Sharing_Setting__mdt.Object_Name__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Matter_Sharing_Settings</relationshipLabel>
        <relationshipName>Matter_Sharing_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Matter_Sharing_Settings</relationshipLabel>
        <relationshipName>Matter_Sharing_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Private_Field__c</fullName>
        <label>Private Field</label>
        <metadataRelationshipControllingField>Matter_Sharing_Setting__mdt.Object_Name__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Matter_Sharing_Settings1</relationshipLabel>
        <relationshipName>Matter_Sharing_Settings1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Matter Sharing Setting</label>
    <pluralLabel>Matter Sharing Settings</pluralLabel>
</CustomObject>